--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "^53.0.16",
+    "expo-mail-composer": "^14.1.5",
+    "expo-print": "^14.1.4",
+    "expo-sharing": "^13.1.5",
+    "expo-sms": "^13.1.4",
     "expo-status-bar": "^2.2.3",
     "metro": "^0.82.4",
     "react": "19.0.0",
