--- a/eas.json
+++ b/eas.json
@@ -1,15 +1,18 @@
 {
-  "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal"
-    },
-    "preview": {
-      "distribution": "internal",
-      "android": {
+  "builds": {
+    "android": {
+      "release": {
+        "workflow": "managed"
+      },
+      "preview": {
+        "workflow": "managed",
         "buildType": "apk"
       }
     },
-    "production": {}
+    "ios": {
+      "release": {
+        "workflow": "managed"
+      }
+    }
   }
 }
