--- a/app.json
+++ b/app.json
@@ -10,9 +10,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#3B82F6"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.pizzabarbas.pos",
@@ -28,9 +26,7 @@
     "web": {
       "bundler": "metro"
     },
-    "plugins": [
-      "expo-dev-client"
-    ],
+
     "extra": {
       "eas": {
         "projectId": "1d1ad764-a0e2-4a3d-9e6a-ecf635c17ab9"
