--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "^0.20.0",
-    "expo-updates": "~0.28.15"
+    "expo-updates": "~0.28.15",
+    "expo-dev-client": "~5.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
