--- a/eas.json
+++ b/eas.json
@@ -14,7 +14,13 @@
         "buildType": "apk"
       },
       "ios": {
-        "simulator": false
+        "simulator": true
+      }
+    },
+    "ios-simulator": {
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
       }
     },
     "production": {
