--- a/eas.json
+++ b/eas.json
@@ -17,10 +17,10 @@
         "simulator": true
       }
     },
-    "ios-simulator": {
+    "ios-device": {
       "distribution": "internal",
       "ios": {
-        "simulator": true
+        "simulator": false
       }
     },
     "production": {
