--- a/package.json
+++ b/package.json
@@ -17,24 +17,27 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@stripe/stripe-react-native": "0.45.0",
     "expo": "^53.0.16",
+    "expo-crypto": "^14.1.5",
+    "expo-dev-client": "~5.2.3",
     "expo-mail-composer": "^14.1.5",
     "expo-print": "^14.1.4",
     "expo-sharing": "^13.1.5",
     "expo-sms": "^13.1.4",
     "expo-status-bar": "^2.2.3",
+    "expo-updates": "~0.28.15",
     "metro": "^0.82.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-nfc-manager": "^3.16.1",
     "react-native-paper": "^5.11.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "^0.20.0",
-    "expo-updates": "~0.28.15",
-    "expo-dev-client": "~5.2.3"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
